# Crew-AI-Content-Creators

./: .gitignore  README.md  pyproject.toml
assets/: test.py
database/: models.py
src/media_crew/: crew.py  main.py  utils.py
src/media_crew/config/: agents.yaml  tasks.yaml
src/media_crew/tools/: eleven_tts.py  runway_video_tool.py
tests/: test.py  test_utils.py
