[project]
name = "media_crew"
version = "0.1.0"
description = "media_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
media_crew = "media_crew.main:run"
run_crew = "media_crew.main:run"
train = "media_crew.main:train"
replay = "media_crew.main:replay"
test = "media_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
